[package]
name = "polygon_clipping"
version = "0.1.0"
edition = "2021"

description = "An algorithm for computing boolean operations on polygons."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
readme = "README.md"
repository = "https://github.com/andriyDev/polygon_clipping_rs"

categories = ["mathematics"]
keywords = ["polygon", "boolean", "geometry", "union", "intersection"]

[dependencies]
glam = "0.24.1"

[dev-dependencies]
rand = "0.8.5"
